<resources>
    <string name="app_name">Ratatouille</string>
    <string name="login">Login</string>
    <string name="under_login">Immetti la password che ti è stata inviata tramite mail!</string>
    <string name="email">EMAIL</string>
    <string name="inserisci_la_sua_email">Inserisci la sua Email</string>
    <string name="password">PASSWORD</string>
    <string name="inserisci_la_password">Inserisci la Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="salva">SALVA</string>
    <string name="inserisci_cognome">Inserisci Cognome</string>
    <string name="cognome">COGNOME</string>
    <string name="nome">NOME</string>
    <string name="inserisci_nome">Inserisci Nome</string>
    <string name="nuova_password">NUOVA PASSWORD</string>
    <string name="inserisci_nuova_pasword">Inserisci nuova Password</string>
    <string name="iniziamo">INIZIAMO</string>
    <string name="benvenuto">BENVENUTO</string>
    <string name="Produttività">Produttività</string>
    <string name="Staff">Staff</string>
    <string name="Menu">Menu</string>
    <string name="Account">Account</string>
    <string name="Inventario">Inventario</string>
    <string name="ordini">Ordini</string>
    <string name="ordini_cameriere">Ordini Cameriere</string>
    <string name="icon_add">icon add</string>
    <string name="icon_delete">icon_delete</string>
    <string name="cerca_prodotto_in_menu">Cerca Prodotto in Menu</string>
    <string name="categoria">Categoria</string>
    <string name="Esempio_Ingerdienti">Farina \nOlio EVO</string>
    <string name="Esempio_Dosi">500 gr\n10 ml</string>
    <string name="Modifica">Modifica</string>
    <string name="cerca_membro_staff">Cerca Membro Staff</string>
    <string name="indirizzo">Indirizzo</string>
    <string name="numero_telefono">Numero Telefono</string>
    <string name="nome_attivit">Nome Attività</string>
    <string name="nome_cognome">Nome Cognome</string>
    <string name="Descrizione_IMAGEVIEW_icon_set_imagine_profile">Icon set Imagine Profile</string>
    <string name="Descrizione_IMAGEVIEW_imagine_profile">Imagine Profile</string>
    <string name="numero_tavoli">Numero Tavoli:</string>
    <string name="informazioni_attivit">Informazioni Attività</string>
    <string name="annulla">ANNULLA</string>
    <string name="inventario">Inventario</string>
    <string name="cerca_prodotto_in_dispensa">Cerca Prodotto in Inventario</string>
    <string name="prodotti_mancanti">PRODOTTI MANCANTI</string>
    <string name="prodotti_presenti">PRODOTTI PRESENTI</string>
    <string name="inserisci_il_nome_prodotto">Inserisci il Nome Prodotto</string>
    <string name="prezzo_per_singola_unita">PREZZO PER SINGOLA UNITA\'</string>
    <string name="nessuna_categoria_creata">Nessuna categoria creata</string>
    <string name="nome_categoria">Nome Categoria</string>
    <string name="nome_troppo_corto">Nome troppo corto !</string>
    <string name="registra_il_tuo_ristorante">Registra il tuo Ristorante</string>
    <string name="accedi">Accedi</string>
    <string name="nuovo_prodotto">Nuovo Prodotto</string>
    <string name="choose_photo">Choose photo</string>
    <string name="empty_photo">empty photo</string>
    <string name="campo_non_corretto">Campo non corretto !</string>
    <string name="euro">€</string>
    <string name="_0">0</string>
    <string name="virgola">,</string>
    <string name="_00">00</string>
    <string name="descrizione">Descrizione</string>
    <string name="inserisci_la_descrizione_del_prodotto">Inserisci la descrizione del Prodotto</string>
    <string name="allergeni">Allergeni</string>
    <string name="inserisci_gli_allergeni">Inserisci gli Allergeni</string>
    <string name="ingredienti">Ingredienti</string>
    <string name="prodotto_da_passare_in_cucina">Prodotto da passare in cucina</string>
    <string name="aggiungi">AGGIUNGI</string>
    <string name="imagine_logo">Imagine Logo</string>
    <string name="rotation_logo">Rotation Logo</string>
    <string name="welcome">WELCOME</string>

    <string name="welcome_admin">Da questo momento in poi potrai utilizzare Ratatuille23 per gestire al meglio la tua attività di ristorazione!</string>


    <string name="tieni_traccia_dei_progressi_dei_tuoi_dipendenti">Tieni traccia dei progressi dei tuoi dipendenti</string>
    <string name="chef_welcome">Da questo momento in poi potrai utilizzare Ratatouille23 per gestire al meglio la tua cucina!</string>
    <string name="cameriere_welcome">Da questo momento in poi potrai utilizzare Ratatouille23 per gestire al meglio la tua sala!</string>
    <string name="supervisore_welcome">Da questo momento in poi potrai utilizzare Ratatouille23 per gestire e supervisionare l\'attività di ristorazione!</string>
    <string name="warning_password">La password deve essere lunga almeno 3 caratteri</string>
    <string name="warning_email">Formato Email non corretto</string>
    <string name="inizia">INIZIA</string>
    <string name="mesg_login_admin">Registrati per poter iniziare a gestire il tuo Ristorante!</string>
    <string name="kg">Kg</string>
    <string name="quantit_nell_inventario">QUANTITÁ NELL\'INVENTARIO</string>
    <string name="nome_ingrediente">Nome Ingrediente</string>
    <string name="aggiungi_ingrediente">Aggiungi Ingrediente</string>
    <string name="grandezza">GRANDEZZA</string>
    <string name="unita_misura">UNITA MISURA</string>
    <string name="ingrediente_creato">Ingrediente creato!</string>
    <string name="nessun_prodotto">Nessun Prodotto</string>
    <string name="indietro">Indietro</string>
    <string name="modifica_prodotto">Modifica Prodotto</string>
    <string name="ingrediente_aggiornato">Ingrediente Aggiornato</string>
    <string name="modifica_ingrediente">Modifica Ingrediente</string>
    <string name="cerca_categoria">Cerca Categoria</string>
    <string name="crea_categoria">Crea Categoria</string>
    <string name="categoria_creata">Categoria creata!</string>
    <string name="categoria_inserita">Categoria Inserita</string>
    <string name="specificare_la_grandezza">Specificare la grandezza!</string>
    <string name="prodotto_creato">Prodotto Creato !</string>
    <string name="conferma">CONFERMA</string>
    <string name="inserisci_il_suo_cognome">Inserisci il suo Cognome</string>
    <string name="devi_selezionare_un_ruolo">Devi selezionare un ruolo</string>
    <string name="tutti_i_campi_devono_essere_compilati">Tutti i campi devono essere compilati</string>
    <string name="utente_creato">Utente Creato!</string>
    <string name="devi_compilare_tutti_i_campi">Devi compilare tutti i campi</string>
    <string name="dati_aggiornati">Dati Aggiornati</string>
    <string name="conferma_password">Conferma Password</string>
    <string name="conferma_password_caps">CONFERMA PASSWORD</string>
    <string name="nessun_tavolo_registrato">Nessun Tavolo registrato</string>
    <string name="oridni_per_tavolo">Ordini per Tavolo</string>
    <string name="ordini_preparati">Ordini preparati!</string>
    <string name="prodotti_preparati">Prodotti Preparati</string>
    <string name="tavolo">TAVOLO</string>
</resources>