<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Views.Schermate.Login.Fragment.Fragment_ConfirmPassword">

    <LinearLayout
        android:id="@+id/linear_layout_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:orientation="vertical"
        android:paddingStart="32dp"
        android:paddingTop="64dp"
        android:paddingEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_width="230dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_completa_il_profilo_"
            />


        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_marginEnd="12dp">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="50dp"
                    android:fontFamily="@font/sf_compact_rounded_bold"
                    android:text="@string/nome"

                    android:textColor="@color/MainColor"
                    android:textSize="15sp"
                    android:textStyle="bold"

                    android:layout_marginStart="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <EditText
                    android:id="@+id/edit_text_nome"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"

                    android:layout_marginTop="12dp"
                    android:autofillHints=""

                    android:background="@drawable/background_edit_text_stroke"
                    android:ems="10"
                    android:hint="@string/inserisci_nome"

                    android:inputType="textEmailAddress"
                    android:paddingStart="16dp"

                    android:text=""
                    android:textColor="@color/SoftBlack"

                    android:textColorLink="@color/MainColor"
                    android:textCursorDrawable="@color/MainColor"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/DirettiveUtenteTV" />

            </LinearLayout>
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="50dp"
                    android:fontFamily="@font/sf_compact_rounded_bold"
                    android:text="@string/cognome"

                    android:textColor="@color/MainColor"
                    android:textSize="15sp"
                    android:textStyle="bold"

                    android:layout_marginStart="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <EditText
                    android:id="@+id/edit_text_cognome"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"

                    android:layout_marginTop="12dp"
                    android:autofillHints=""

                    android:background="@drawable/background_edit_text_stroke"
                    android:ems="10"
                    android:hint="@string/inserisci_cognome"

                    android:inputType="textEmailAddress"
                    android:paddingStart="16dp"

                    android:text=""
                    android:textColor="@color/SoftBlack"

                    android:textColorLink="@color/MainColor"
                    android:textCursorDrawable="@color/MainColor"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/DirettiveUtenteTV" />

            </LinearLayout>
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="30dp"
            android:fontFamily="@font/sf_compact_rounded_bold"
            android:text="@string/nuova_password"

            android:textColor="@color/MainColor"
            android:textSize="15sp"
            android:textStyle="bold"

            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:layout_marginTop="12dp"
            android:autofillHints=""

            android:background="@drawable/background_edit_text_stroke"
            android:ems="10"
            android:hint="@string/inserisci_nuova_pasword"

            android:inputType="textPassword"
            android:paddingStart="16dp"

            android:text=""
            android:textColor="@color/SoftBlack"

            android:textColorLink="@color/MainColor"
            android:textCursorDrawable="@color/MainColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DirettiveUtenteTV" />

        <android.widget.Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"

            android:background="@drawable/background_button_main"

            android:drawableEnd="@drawable/ic_arrow_forward"
            android:fontFamily="@font/sf_compact_rounded"
            android:paddingStart="36dp"
            android:paddingTop="16dp"
            android:paddingEnd="32dp"

            android:paddingBottom="13dp"
            android:text="@string/salva"
            android:textColor="@color/white"
            android:textSize="18sp"

            android:textStyle="bold" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>