<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.Schermate.Inventario.Fragment_ListInventary">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">
        <LinearLayout
            android:id="@+id/toolbar_menu_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="8dp"
            android:layout_marginTop="16dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start"
                android:layout_marginStart="16dp">
                <TextView
                    android:id="@+id/text_view_title_inventory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:fontFamily="@font/sf_compact_rounded_bold"
                    android:text="@string/inventario"
                    android:textColor="@color/SoftBlack"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end"
                android:layout_marginEnd="16dp">

                <ImageView
                    android:id="@+id/ic_add_ingrediente"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:clickable="true"
                    android:src="@drawable/ic_add_category"
                    android:contentDescription="@string/icon_add" />
                <ImageView
                    android:id="@+id/ic_delete_product"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="16dp"
                    android:clickable="true"
                    android:src="@drawable/ic_trash_category"
                    android:contentDescription="@string/icon_delete"/>

            </LinearLayout>
        </LinearLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <EditText
                android:id="@+id/edit_text_name_category"
                android:layout_width="match_parent"
                android:layout_height="50dp"

                android:autofillHints=""

                android:background="@drawable/background_search_category"
                android:ems="10"
                android:hint="@string/cerca_prodotto_in_dispensa"
                android:inputType="text"
                android:paddingStart="42dp"
                android:textColorHint="@color/Gray"
                android:text=""
                android:textColor="@color/Black"

                android:textColorLink="@color/MainColor"
                android:textCursorDrawable="@drawable/custom_cursor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry" />
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:contentDescription="@string/icon_add"
                android:src="@drawable/ic_search"
                app:layout_constraintStart_toStartOf="@+id/edit_text_name_category"
                app:layout_constraintTop_toTopOf="@+id/edit_text_name_category" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp">

            <androidx.core.widget.NestedScrollView
                android:id="@+id/scrollView2"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/linear_layout_info_account"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_view_exist"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:fontFamily="@font/sf_compact_rounded_bold"
                        android:text="@string/prodotti_presenti"
                        android:textColor="@color/DarkGray"
                        android:textSize="17sp" />
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_products_exist"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="1dp"
                        />

                    <TextView
                        android:id="@+id/text_view_missing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/sf_compact_rounded_bold"
                        android:text="@string/prodotti_mancanti"
                        android:textColor="@color/DarkGray"
                        android:textSize="17sp" />
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_products_finished"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>



</FrameLayout>