<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/fragment_list_product"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/SoftGray"
    tools:context=".Views.Schermate.Menu.Fragment_ListProducts">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">
        <LinearLayout
            android:id="@+id/toolbar_menu_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="8dp"
            android:layout_marginTop="16dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start|center_vertical"
                android:layout_marginStart="0dp">

                <ImageView
                    android:id="@+id/ic_back"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="8dp"
                    android:clickable="true"
                    android:contentDescription="@string/icon_add"
                    android:src="@drawable/ic_back" />

                <TextView
                    android:id="@+id/text_view_title_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:fontFamily="@font/sf_compact_rounded_bold"
                    android:text="@string/categoria"
                    android:textColor="@color/SoftBlack"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical|end"
                android:layout_marginEnd="16dp">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginEnd="8dp">

                    <ImageView
                        android:id="@+id/ic_order"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:clickable="true"
                        android:src="@drawable/ic_order"
                        android:contentDescription="@string/icon_add"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:visibility="invisible"
                        android:id="@+id/ic_back_order"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:clickable="true"
                        android:contentDescription="@string/icon_add"
                        android:rotation="45"
                        android:src="@drawable/baseline_horizontal_rule_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
                <ImageView
                    android:id="@+id/ic_add_product"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:clickable="true"
                    android:src="@drawable/ic_add_category"
                    android:contentDescription="@string/icon_add" />
                <ImageView
                    android:id="@+id/ic_delete_product"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="8dp"
                    android:clickable="true"
                    android:src="@drawable/ic_trash_category"
                    android:contentDescription="@string/icon_delete"/>

            </LinearLayout>
        </LinearLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_layout_search_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_search_category"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="16dp">

                <EditText
                    android:id="@+id/edit_text_search_product"
                    android:layout_width="match_parent"

                    android:layout_height="50dp"

                    android:autofillHints=""

                    android:background="@drawable/background_search_category"
                    android:ems="10"
                    android:hint="@string/cerca_prodotto_in_menu"
                    android:inputType="text"
                    android:paddingStart="42dp"
                    android:text=""
                    android:textColor="@color/Black"
                    android:textColorHint="@color/DarkGray"

                    android:textColorLink="@color/MainColor"
                    android:textCursorDrawable="@drawable/custom_cursor"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="RtlSymmetry" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:clickable="true"
                    android:contentDescription="@string/icon_add"
                    android:src="@drawable/ic_search"
                    app:layout_constraintStart_toStartOf="@+id/edit_text_search_product"
                    app:layout_constraintTop_toTopOf="@+id/edit_text_search_product" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <androidx.appcompat.widget.AppCompatButton

                    android:id="@+id/button_cancel_orders"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_margin="16dp"
                    android:background="@drawable/background_button_white"
                    android:ems="8"
                    android:text="@string/annulla"
                    android:textColor="@color/MainColor"
                    android:visibility="gone"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton

                    android:id="@+id/button_confirm_orders"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:background="@drawable/background_button_main"

                    android:layout_margin="16dp"
                    android:ems="8"
                    android:inputType="text"
                    android:text="@string/conferma"
                    android:textColor="@color/white"
                    android:textColorHint="@color/DarkGray"
                    android:textColorLink="@color/MainColor"

                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_products"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <ProgressBar
            android:id="@+id/progressbar"
            android:visibility="gone"
            android:layout_marginTop="64dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:visibility="gone"
            android:id="@+id/text_view_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/sf_compact_rounded_regular_italic"
            android:text="@string/nessun_prodotto"
            android:textColor="@color/DarkGray"
            android:textSize="24sp" />
    </LinearLayout>

</FrameLayout>